--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -65,7 +65,7 @@
             <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
           </a>
           <h4 class="post-title clearfix">
-            <img class="post-icon" alt="Text post" src="images/text.png">
+            <%= image_tag "text.png", :class=>"post-icon", :alt=>"Text post" %>
             <a href="#" title="Permalink to Donec consectetuer ligula vulputate sem tristique cursus" rel="bookmark">Donec consectetuer ligula vulputate...	</a>
           </h4>
           <div class="meta clearfix">
@@ -83,7 +83,7 @@
             <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
           </a>
           <h4 class="post-title clearfix">
-            <img class="post-icon" alt="Gallery post" src="images/image.png">
+            <%= image_tag "image.png", :class=>"post-icon", :alt=>"Gallery post" %>
             <a href="#" title="Permalink to Nam nibh arcu tristique eget pretium vitae libero ac risus" rel="bookmark">Nam nibh arcu tristique eget pretiu...</a>
           </h4>
           <div class="meta clearfix">
@@ -101,7 +101,7 @@
             <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
           </a>
           <h4 class="post-title clearfix">
-            <img class="post-icon" alt="Photo" src="images/photo.png">
+            <%= image_tag "photo.png", alt: "Photo", class: "post-icon" %>
             <a href="#" title="Permalink to Aliquam quam lectus pulvinar urna leo dignissim lorem" rel="bookmark">Aliquam quam lectus pulvinar urna l...</a>
           </h4>
           <div class="meta clearfix">
@@ -119,7 +119,7 @@
             <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
           </a>
           <h4 class="post-title clearfix">
-            <img class="post-icon" alt="Video post" src="images/vid.png">
+            <%= image_tag "vid.png", :class=>"post-icon", :alt=>"Video post" %>
             <a href="#" title="Permalink to Phasellus scelerisque massa molestie iaculis lectus pulvinar" rel="bookmark">Phasellus scelerisque massa molesti...	</a>
           </h4>
           <div class="meta clearfix">
@@ -293,9 +293,10 @@
 
       <div id="tabwidget" class="widget tab-container"> 
         <ul id="tabnav" class="clearfix"> 
-          <li><h3><a href="#tab1" class="selected"><img src="images/view-white-bg.png" alt="Popular">Popular</a></h3></li>
-          <li><h3><a href="#tab2"><img src="images/time-white.png" alt="Recent">Recent</a></h3></li>
-          <li><h3><a href="#tab3"><img src="images/komen-putih.png" alt="Comments">Comments</a></h3></li>
+          <li><h3><a href="#tab1" class="selected">
+              <%= image_tag "view-white-bg.png", :alt=>"Popular" %>Popular</a></h3></li>
+          <li><h3><a href="#tab2"><%= image_tag "time-white.png", :alt=>"Recent" %>Recent</a></h3></li>
+          <li><h3><a href="#tab3"><%= image_tag "komen-putih.png", :alt=>"Comments" %>Comments</a></h3></li>
         </ul> 
 
         <div id="tab-content">
@@ -327,7 +328,10 @@
               <div class="clearfix"></div>				
               </li>
               <li>
-              <a href="#"><img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" /></a>
+              <%= link_to image_tag("thumb_225x136.jpg", :class=> "thumb", :alt=> "") %>
+              <a href="#">
+                <img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" />
+              </a>
               <h4 class="post-title"><a href="#">Morbi est est lectus non rutrum...</a></h4>
               <p>Fusce aliquet non ipsum vitae scelerisque. Nullam ultricies adipiscing...</p>
               <div class="clearfix"></div>				
@@ -543,7 +547,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Fusce pellentesque suscipit nibh massa porta molestie iaculis" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Text post" src="images/text.png"> Fusce pellentesque suscipit nibh ma...</h4></a>
+      <h4 class="post-title clearfix">
+        <%= image_tag "text.png", class: "post-icon", alt: "Text post" %>Fusce pellentesque suscipit nibh ma...</h4></a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
     </div>
@@ -554,7 +559,9 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Praesent placerat risus quis pellentesque suscipit nibh ultricies nulla" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Gallery post" src="images/image.png"> Praesent placerat risus quis pellen...</h4>
+
+      <h4 class="post-title clearfix">
+        <%= image_tag "image.png", class: "post-icon", alt: "Gallery post" %>Praesent placerat risus quis pellen...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
@@ -566,7 +573,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Integer malesuada commodo nulla ligula vulputate sem tristique" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Photo" src="images/photo.png"> Integer malesuada commodo nulla lig...</h4>
+      <h4 class="post-title clearfix">
+        <%= image_tag "photo.png", :class=>"post-icon", :alt=>"Photo" %> Integer malesuada commodo nulla lig...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
@@ -578,7 +586,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Vestibulum volutpat tortor libero sodales leo mauris ut lectus" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Video post" src="images/vid.png"> Vestibulum volutpat tortor libero s...</h4>
+      <h4 class="post-title clearfix">
+        <%= image_tag "vid.png", :class=>"post-icon", :alt=>"Video post" %> Vestibulum volutpat tortor libero s...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
@@ -590,7 +599,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Fusce accumsan mollis eros amet interdum consectetuer" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Text post" src="images/text.png"> Fusce accumsan mollis eros amet int...</h4>
+      <h4 class="post-title clearfix">
+        <%= image_tag "text.png", :class=> "post-icon", :alt=>"Text post" %> Fusce accumsan mollis eros amet int...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
@@ -602,7 +612,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Quisque fermentum penatibus et magnis dis parturient montes" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Gallery post" src="images/image.png"> Quisque fermentum penatibus et magn...</h4>
+      <h4 class="post-title clearfix">
+        <%= image_tag "image.png", :class=>"post-icon", :alt=>"Gallery post" %> Quisque fermentum penatibus et magn...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
@@ -614,7 +625,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Proin malesuada adipiscing lacus imperdiet nibh feugiat" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Photo" src="images/photo.png"> Proin malesuada adipiscing lacus im...</h4>
+      <h4 class="post-title clearfix">
+        <%= image_tag "photo.png", :class=>"post-icon", :alt=>"Photo" %> Proin malesuada adipiscing lacus im...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 30, 2013</span>
@@ -626,7 +638,8 @@ links		   : "blank"
       <img width="225" height="136" src="http://placehold.it/225x136" alt="" />
     </a>
     <a href="#" title="Permalink to Vivamus ultrices luctus nunc sem sit amet interdum consectetuer" rel="bookmark">
-      <h4 class="post-title clearfix"><img class="post-icon" alt="Video post" src="images/vid.png"> Vivamus ultrices luctus nunc sem si...</h4>
+      <h4 class="post-title clearfix">
+        <%= image_tag "vid.png", :class=>"post-icon", :alt=>"Video post" %> Vivamus ultrices luctus nunc sem si...</h4>
     </a>
     <div class="meta clearfix">
       <span class="date">July 18, 2013</span>
