Home is with all image IS READY

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -99,7 +99,7 @@
           <p>Followers</p>
           </li>
           <li>
-          <%= link_to image_tag("fa-icon.png", :alt=>""), root_path %>
+          <%= link_to image_tag("fb-icon.png", :alt=>""), root_path %>
           <h4>109</h4>
           <p>Fans</p>
           </li>
