--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -328,34 +328,31 @@
               <div class="clearfix"></div>				
               </li>
               <li>
-              <%= link_to image_tag("thumb_225x136.jpg", :class=> "thumb", :alt=> "") %>
-              <a href="#">
-                <img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" />
-              </a>
+              <%= link_to image_tag("thumb_225x136.png", :class=> "thumb", :alt=> "", width: 225, height: 136) %>
               <h4 class="post-title"><a href="#">Morbi est est lectus non rutrum...</a></h4>
               <p>Fusce aliquet non ipsum vitae scelerisque. Nullam ultricies adipiscing...</p>
               <div class="clearfix"></div>				
               </li>
               <li>
-              <a href="#"><img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" /></a>
+              <%= link_to image_tag("thumb_225x136.png", :class=> "thumb", :alt=> "", width: 225, height: 136) %>
               <h4 class="post-title"><a href="#">Aliquam quam lectus pulvinar ur...</a></h4>
               <p>Fusce aliquet non ipsum vitae scelerisque. Nullam ultricies adipiscing...</p>
               <div class="clearfix"></div>				
               </li>
               <li>
-              <a href="#"><img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" /></a>
+              <%= link_to image_tag("thumb_225x136.png", :class=> "thumb", :alt=> "", width: 225, height: 136) %>
               <h4 class="post-title"><a href="#">Suspen disse auctor dapibus neq...</a></h4>
               <p>Fusce aliquet non ipsum vitae scelerisque. Nullam ultricies adipiscing...</p>
               <div class="clearfix"></div>				
               </li>
               <li>
-              <a href="#"><img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" /></a>
+              <%= link_to image_tag("thumb_225x136.png", :class=> "thumb", :alt=> "", width: 225, height: 136) %>
               <h4 class="post-title"><a href="#">Porta lorem ipsum dolor sit ame...</a></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer place...</p>
               <div class="clearfix"></div>				
               </li>
               <li>
-              <a href="#"><img width="225" height="136" src="images/thumb_225x136.jpg" class="thumb" alt="" /></a>
+              <%= link_to image_tag("thumb_225x136.png", :class=> "thumb", :alt=> "", width: 225, height: 136) %>
               <h4 class="post-title"><a href="#">Integer vitae libero ac risus e...</a></h4>
               <p>Fusce aliquet non ipsum vitae scelerisque. Nullam ultricies adipiscing...</p>
               <div class="clearfix"></div>				
