--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <header id="header" class="container">
 <div id="mast-head">
   <div id="logo">
-    <%= link_to image_tag("logo.png", alt: "Accion Catolica"), root_path, title: "Accion Catolica" %>
+    <%= link_to "Acción Catolica", root_path  %>
+    <% link_to image_tag("logo.png", alt: "Accion Catolica"), root_path, title: "Accion Catolica" %>
   </div>
 </div>
 
@@ -37,14 +38,18 @@
         </li>
 
         <li><%= link_to image_tag("home.png", alt: "Accion Catolica"), root_path, title: "Accion Catolica" %></li>
-        <li class="dropdown"><a href="index.html">Home</a>
+
+        <li class="dropdown"><a href="index.html">Quiénes somos</a>
         <ul class="sub-menu">
           <li><a href="magazine2.html">Homepage 2</a></li>
           <li><a href="blog.html">Homepage 3</a></li>
         </ul>
         </li>
-        <li><a href="about.html">About</a></li>
-        <li class="dropdown"><a href="##">Page Templates</a>
+
+
+        <li><a href="about.html">Qué te ofrecemos</a></li>
+
+        <li class="dropdown"><a href="##">Inserción en la pastoral </a>
         <ul class="sub-menu">
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -58,7 +63,8 @@
           <li><a href="magazine2.html">Magazine 2</a></li>
         </ul>
         </li>
-        <li class="dropdown"><a href="blog.html">Blog</a>
+
+        <li class="dropdown"><a href="blog.html">Escuela de santidad</a>
         <ul class="sub-menu">
           <li><a href="fashion-news.html">Fashion News</a></li>
           <li><a href="#">Game News</a></li>
@@ -73,9 +79,11 @@
           </li>
         </ul>
         </li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="single-post.html">Single Post</a></li>
-        <li><a href="documentation/">Documentation</a></li>
+
+
+        <li><a href="contact.html">Nuestros Pastores</a></li>
+        <li><a href="single-post.html">Nuestros dirigentes</a></li>
+        <li><a href="documentation/">Identidad laical</a></li>
       </ul>
 
     </div><!--/.nav-collapse -->
