Update colors highliter colors

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -288,7 +288,7 @@ ul.dropdown-menu a {
 ul.dropdown-menu a:hover,
 ul.dropdown-menu a:active,
 ul.dropdown-menu a:focus {
-  background:#325C80 !important;
+  background:#0851BD !important;
   color:#fff !important;
 }
 
