--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@page) do |f| %>
+<%= form_for @page, :html => {role: "form" } do |f| %>
   <% if @page.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@page.errors.count, "error") %> prohibited this page from being saved:</h2>
@@ -10,20 +10,22 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="span5">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :parent_id %><br>
+  <div class="span5">
+    <%= f.label :parent_id %>
     <%= f.collection_select :parent_id, Page.order(:name), :id, :name, include_blank: true %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="span10">
+  <div class="form-group">
+    <%= f.label :content %>
+    <%= f.text_area :content, class: "form-control", rows: 10, style:"width: 100%; height: 800px;"  %>
+  </div>
+  </div>
+  <div class="span5">
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
