--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing page</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', pages_path %>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="page-header">
+      <h1>Editing page</h1>
+    </div>
+    <div class="span10">
+      <%= render 'form' %>
+    <div class="span10">
+      <%= link_to 'Mostrar', @page %> |
+      <%= link_to 'Regresar', pages_path %>
+    </div>
+    </div>
+  </div>
+</div>
