--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -22,6 +22,7 @@
   <div class="span10">
   <div class="form-group">
     <%= f.label :content %>
+    <%= link_to "Ayuda", "https://daringfireball.net/projects/markdown/basics" %>
     <%= f.text_area :content, class: "form-control", rows: 10, style:"width: 100%; height: 800px;"  %>
   </div>
   </div>
