Devise IS READY

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Acción Catolica</title>
     <meta charset="UTF-8" />
     <%= favicon_link_tag('favicon.png') %>
+    <%= javascript_include_tag :application %>
     <meta name="viewport" content="width=device-width" />
     <%= render 'layouts/styles_javascripts' %>
     <%= csrf_meta_tags %>
