Dashboard IS READY

--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,4 +1,4 @@
 <% if user_signed_in? %>
-  | <strong><%= current_user.email %></strong>.
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+  <strong><%= current_user.email %></strong>.
+  <%= link_to "Salir", destroy_user_session_path, method: :delete %>
 <% end %>
