--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,16 +1,4 @@
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="page-header">
-      <h1>Editing page</h1>
-    </div>
-    <% if user_signed_in? %>
-    <div class="span10">
-      <%= render 'form' %>
-      <div class="span10">
-        <%= link_to 'Mostrar', @page %> |
-        <%= link_to 'Regresar', pages_path %>
-      </div>
-    </div>
-  <% end %>
-  </div>
-</div>
+<h1 class="page-header">Editar pagina</h1>
+<%= render 'form' %>
+<%= link_to 'Mostrar', @page %> |
+<%= link_to 'Regresar', pages_path %>
